# Sales-Data-Analysis

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  SETTINGS_README.md  analyze_models.py  app.py  data_source_config.json  exceptions.py  main.py  optimizer_pattern_sets.json  pattern_optimizer_logic.py  pyproject.toml  pyvenv.cfg  readmePL.md  requirements.txt  settings.json
docs/: PROJECT_SUMMARY.md  README_START_HERE.md  USAGE_GUIDE.md
migration/: QUICKSTART.md  README.md  create_orders_table.py  import_all.py  import_current_sales.py  import_forecast.py  import_model_metadata.py  import_size_aliases.py  import_stock.py  initial_populate.py  populate_cache.py  refresh_views.py  setup_database.py
migration/individual/: create_color_aliases_table.py  create_orders_table.py  import_bom.py  import_category_mappings.py  import_color_aliases.py  import_current_sales.py  import_forecast.py  import_model_metadata.py  import_size_aliases.py  import_stock.py
migration/sql/: bom_schema.sql  internal_forecasts_schema.sql  materialized_views.sql  orders_schema.sql  schema.sql  triggers.sql  update_orders_status.sql
nlq/: __init__.py  ai_generator.py  duckdb_executor.py  executor.py  intent.py  parser.py  patterns.py  postgres_executor.py  schema_context.py  sql_generator.py  sql_validator.py  vocabulary.py
sales_data/: __init__.py  analyzer.py  data_source.py  data_source_factory.py  db_source.py  dtype_optimizer.py  file_source.py  loader.py  paths_to_files.txt  paths_to_files.txt.example  stock_history_cache.py  validator.py
sales_data/analysis/: __init__.py  aggregation.py  classification.py  forecast_accuracy.py  forecast_comparison.py  internal_forecast.py  inventory_metrics.py  material_planning.py  ml_feature_engineering.py  ml_forecast.py  ml_model_selection.py  order_priority.py  pattern_helpers.py  projection.py  reports.py  utils.py
ui/: constants.py  i18n.py  sidebar.py  tab_forecast_accuracy.py  tab_forecast_comparison.py  tab_marker_viewer.py  tab_material_planning.py  tab_ml_forecast.py  tab_monthly_analysis.py  tab_nlq.py  tab_order_creation.py  tab_order_recommendations.py  tab_order_tracking.py  tab_pattern_optimizer.py  tab_sales_analysis.py  tab_task_planner.py  tab_weekly_analysis.py
ui/shared/: __init__.py  aggrid_helpers.py  data_loaders.py  display_helpers.py  excluded_skus_dialog.py  forecast_accuracy_loader.py  navigation.py  session_manager.py  sku_utils.py  styles.py
utils/: __init__.py  hpgl_parser.py  import_utils.py  internal_forecast_repository.py  log_messages.py  logging_config.py  material_constraints.py  ml_model_repository.py  optimizer_pattern_sets.json  order_creation_ui.py  order_manager.py  order_post_processor.py  order_repository.py  order_repository_factory.py  parallel_loader.py  pattern_optimizer.py  pattern_optimizer_logic.py  pdf_parser.py  product_image_fetcher.py  settings_manager.py  size_alias_loader.py  sku_exclude_manager.py  task_manager.py
