[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "<3.14"
dependencies = [
    "pandas>=2.3.3",
    "openpyxl>=3.1.5",
    "streamlit>=1.51.0",
    "plotly-express>=0.4.1"
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pylint.main]
py-version = "3.13"
jobs = 0
ignore = [".git", ".venv", "__pycache__", "bak"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "df", "ss", "cv", "sd", "rop"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "bak"]
skips = ["B101", "B601"]
