[project]
name = "stock-monitor"
version = "0.1.0"
description = "Streamlit inventory management app for sales analytics, stock forecasting, and order optimization."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "streamlit>=1.56.0",
    "streamlit-aggrid>=1.2.1.post2",
    "streamlit-sortables>=0.3.1",
    "st-copy-to-clipboard>=0.1.6",
    "pandas>=2.3.3",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pyarrow>=18.1.0",
    "plotly>=6.0",
    "psycopg2-binary>=2.9.12",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.2",
    "camelot-py>=1.0.9",
    "statsmodels>=0.14.6",
    "pmdarima>=2.1.1",
    "lightgbm>=4.6.0",
    "scikit-learn>=1.8.0",
    "duckdb>=1.5.2",
    "anthropic",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "freezegun>=1.5.5",
]

[tool.black]
line-length = 100
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pylint.main]
py-version = "3.13"
jobs = 0
ignore = [".git", ".venv", "__pycache__", "bak"]

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-arguments",
    "too-many-instance-attributes",
    "too-many-branches",
    "too-many-statements",
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "df", "ss", "cv", "sd", "rop"]

[tool.bandit]
exclude_dirs = [".venv", "tests", "bak"]
skips = ["B101", "B601"]
